# drf-auth-

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
drf_auth/: settings.py  urls.py
snacks/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_auto_20210907_1704.py
